--- a/thesis/atlas.tex
+++ b/thesis/atlas.tex
@@ -1160,13 +1160,6 @@ submitted, accepted
   of the Australia Telescope, which is funded by the Commonwealth of Australia
   for operation as a National Facility managed by CSIRO.
 
-%
-%
-\bibliographystyle{mnras}
-\bibliography{rgz-cdfs-ms}
-
-%
-
 \appendix
 
 \section{Classification models}\label{app:models}
@@ -1512,3 +1505,4 @@ J002951.19-440556.6 & 7.4633 & -44.0991 & C0342 &  & J002951.26-440556.4 & 7.463
     \end{figure*}
 
 %
+\unappendix
