--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -795,7 +795,7 @@ robust conclusions can be reached.},
 	month = mar,
 	year = {2020},
 	note = {arXiv: 2003.06137},
-	keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - High Energy Astrophysical Phenomena},
+	keywords = {Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Astrophysics of Galaxies},
 	file = {Hardcastle and Croston - 2020 - Radio galaxies and feedback from AGN jets.pdf:C\:\\Users\\matthew\\Zotero\\storage\\IWLK4S7Y\\Hardcastle and Croston - 2020 - Radio galaxies and feedback from AGN jets.pdf:application/pdf;Hardcastle and Croston - 2020 - Radio galaxies and feedback from AGN jets.pdf:C\:\\Users\\matthew\\Zotero\\storage\\R6DFI4ER\\Hardcastle and Croston - 2020 - Radio galaxies and feedback from AGN jets.pdf:application/pdf;Hardcastle and Croston - 2020 - Radio galaxies and feedback from AGN jets.pdf:C\:\\Users\\matthew\\Zotero\\storage\\ZJRBMEKJ\\Hardcastle and Croston - 2020 - Radio galaxies and feedback from AGN jets.pdf:application/pdf}
 }
 
@@ -1100,7 +1100,7 @@ Peкypcивныe бaйecoвcкиe выpaжeния oпиcывaющиe пoвeдeн
 	author = {Heald, George},
 	month = nov,
 	year = {2008},
-	keywords = {Magnetic fields, methods: data analysis, polarization, techniques: polarimetric},
+	keywords = {techniques: polarimetric, polarization, methods: data analysis, Magnetic fields},
 	pages = {591--602},
 	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\QJC6UN3J\\Heald - 2009 - The Faraday rotation measure synthesis technique.pdf:application/pdf;Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\C7EDCD6M\\Heald - 2009 - The Faraday rotation measure synthesis technique.pdf:application/pdf;Heald - 2008 - The Faraday rotation measure synthesis technique.pdf:C\:\\Users\\matthew\\Zotero\\storage\\DU89DGV3\\Heald - 2008 - The Faraday rotation measure synthesis technique.pdf:application/pdf}
 }
@@ -2884,7 +2884,7 @@ development. The package documentation is available at https://astrodash.readthe
 }
 
 @article{ma_broad-band_2019,
-	title = {A broad-band spectro-polarimetric view of the {NVSS} rotation measure catalogue - {I}. {Breaking} the nπ-ambiguity},
+	title = {A broad-band spectro-polarimetric view of the {NVSS} rotation measure catalogue - {I}. {Breaking} the n\${\textbackslash}pi\$-ambiguity},
 	volume = {487},
 	issn = {0035-8711},
 	shorttitle = {broadband},
@@ -2898,7 +2898,7 @@ development. The package documentation is available at https://astrodash.readthe
 	author = {Ma, Yik Ki and Mao, S. A. and Stil, Jeroen and Basu, Aritra and West, Jennifer and Heiles, Carl and Hill, Alex S. and Betti, S. K.},
 	month = aug,
 	year = {2019},
-	keywords = {galaxies: active, galaxies: magnetic fields, ISM: magnetic fields, radio continuum: galaxies},
+	keywords = {galaxies: active, ISM: magnetic fields, radio continuum: galaxies, galaxies: magnetic fields},
 	pages = {3432--3453},
 	file = {Full Text:C\:\\Users\\matthew\\Zotero\\storage\\EZRPZCB8\\Ma et al. - 2019 - A broad-band spectro-polarimetric view of the NVSS.pdf:application/pdf;Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\QQ6F5IIR\\Ma et al. - 2019 - A broad-band spectro-polarimetric view of the NVSS.pdf:application/pdf;Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\LIA7T2GF\\Ma et al. - 2019 - A broad-band spectro-polarimetric view of the NVSS.pdf:application/pdf;Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\5BANF2LS\\Ma et al. - 2019 - A broad-band spectro-polarimetric view of the NVSS.pdf:application/pdf;Ma et al. - 2019 - A broad-band spectro-polarimetric view of the NVSS.pdf:C\:\\Users\\matthew\\Zotero\\storage\\WHDMH4FS\\Ma et al. - 2019 - A broad-band spectro-polarimetric view of the NVSS.pdf:application/pdf;Snapshot:C\:\\Users\\matthew\\Zotero\\storage\\3VFHDLX2\\2019MNRAS.487.html:text/html;Snapshot:C\:\\Users\\matthew\\Zotero\\storage\\WWSPJVKX\\5490375.html:text/html}
 }
@@ -2954,7 +2954,7 @@ http://cdsarc.u-strasbg.fr (http://130.79.128.5) or via http://cdsarc.u-strasbg.
 	author = {Van Eck, C. L. and Haverkorn, M. and Alves, M. I. R. and Beck, R. and de Bruyn, A. G. and Enßlin, T. and Farnes, J. S. and Ferrière, K. and Heald, G. and Horellou, C. and Horneffer, A. and Iacobelli, M. and Jelić, V. and Martí-Vidal, I. and Mulcahy, D. D. and Reich, W. and Röttgering, H. J. A. and Scaife, A. M. M. and Schnitzeler, D. H. F. M. and Sobey, C. and Sridhar, S. S.},
 	month = jan,
 	year = {2017},
-	keywords = {ISM: clouds, ISM: magnetic fields, local insterstellar matter, polarization, radio continuum: ISM},
+	keywords = {ISM: magnetic fields, polarization, ISM: clouds, local insterstellar matter, radio continuum: ISM},
 	pages = {A98},
 	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\Z2UV3P9S\\Van Eck et al. - 2017 - Faraday tomography of the local interstellar mediu.pdf:application/pdf;Van Eck et al. - 2017 - Faraday tomography of the local interstellar mediu.pdf:C\:\\Users\\matthew\\Zotero\\storage\\JB8H39NS\\Van Eck et al. - 2017 - Faraday tomography of the local interstellar mediu.pdf:application/pdf}
 }
@@ -2991,7 +2991,7 @@ representative SOM can be trained.},
 	author = {Galvin, T. J. and Huynh, M. T. and Norris, R. P. and Wang, X. R. and Hopkins, E. and Polsterer, K. and Ralph, N. O. and O'Brien, A. N. and Heald, G. H.},
 	month = jul,
 	year = {2020},
-	keywords = {infrared: galaxies, methods: statistical, radio continuum: galaxies},
+	keywords = {radio continuum: galaxies, methods: statistical, infrared: galaxies},
 	pages = {2730--2758},
 	file = {Snapshot:C\:\\Users\\matthew\\Zotero\\storage\\UUY7ZCIN\\5866509.html:text/html;Submitted Version:C\:\\Users\\matthew\\Zotero\\storage\\ZQMS4ZQC\\Galvin et al. - 2020 - Cataloguing the radio-sky with unsupervised machin.pdf:application/pdf;Submitted Version:C\:\\Users\\matthew\\Zotero\\storage\\3G4WD9RP\\Galvin et al. - 2020 - Cataloguing the radio-sky with unsupervised machin.pdf:application/pdf}
 }
@@ -3028,7 +3028,7 @@ representative SOM can be trained.},
 	author = {Pan, Sinno Jialin and Yang, Qiang},
 	month = oct,
 	year = {2010},
-	keywords = {data mining, Data mining, data mining., inductive transfer learning, knowledge engineering, Knowledge engineering, knowledge transfer, Knowledge transfer, Labeling, learning by example, Learning systems, machine learning, Machine learning, Machine learning algorithms, optimisation, Space technology, survey, Testing, Training data, transductive transfer learning, Transfer learning, unsupervised learning, unsupervised transfer learning},
+	keywords = {machine learning, data mining, Data mining, data mining., inductive transfer learning, knowledge engineering, Knowledge engineering, knowledge transfer, Knowledge transfer, Labeling, learning by example, Learning systems, Machine learning, Machine learning algorithms, optimisation, Space technology, survey, Testing, Training data, transductive transfer learning, Transfer learning, unsupervised learning, unsupervised transfer learning},
 	pages = {1345--1359},
 	file = {IEEE Xplore Abstract Record:C\:\\Users\\matthew\\Zotero\\storage\\SK3TS2FT\\5288526.html:text/html;IEEE Xplore Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\DRH6PAZR\\Pan and Yang - 2010 - A Survey on Transfer Learning.pdf:application/pdf;Pan and Yang - 2010 - A Survey on Transfer Learning.pdf:C\:\\Users\\matthew\\Zotero\\storage\\2FTE8P3G\\Pan and Yang - 2010 - A Survey on Transfer Learning.pdf:application/pdf}
 }
@@ -3160,7 +3160,7 @@ accelerating clouds, are trapped in the ISM for a longer time and hence affect t
 	author = {Mukherjee, Dipanjan and Bicknell, Geoffrey V. and Sutherland, Ralph and Wagner, Alex},
 	month = sep,
 	year = {2016},
-	keywords = {galaxies: evolution, galaxies: high-redshift, galaxies: ISM, galaxies: jets, hydrodynamics, methods: numerical},
+	keywords = {galaxies: evolution, galaxies: jets, galaxies: high-redshift, galaxies: ISM, hydrodynamics, methods: numerical},
 	pages = {967--983},
 	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\BP4FUIU5\\Mukherjee et al. - 2016 - Relativistic jet feedback in high-redshift galaxie.pdf:application/pdf}
 }
@@ -3186,7 +3186,7 @@ Qualitatively, our simulations compare favourably with kinematic and morphologic
 	author = {Mukherjee, Dipanjan and Bicknell, Geoffrey V. and Wagner, Alexander Y. and Sutherland, Ralph S. and Silk, Joseph},
 	month = oct,
 	year = {2018},
-	keywords = {galaxies: evolution, galaxies: high-redshift, galaxies: ISM, galaxies: jets, hydrodynamics, methods: numerical},
+	keywords = {galaxies: evolution, galaxies: jets, galaxies: high-redshift, galaxies: ISM, hydrodynamics, methods: numerical},
 	pages = {5544--5566},
 	file = {Full Text:C\:\\Users\\matthew\\Zotero\\storage\\Z4P9ZLXN\\Mukherjee et al. - 2018 - Relativistic jet feedback - III. Feedback on gas d.pdf:application/pdf}
 }
@@ -3223,7 +3223,7 @@ circumnuclear disc. Hydrodynamical modelling shows that the apparent discrepancy
 	author = {Zovaro, Henry R. M. and Sharp, Robert and Nesvadba, Nicole P. H. and Bicknell, Geoffrey V. and Mukherjee, Dipanjan and Wagner, Alexander Y. and Groves, Brent and Krishna, Shreyam},
 	month = apr,
 	year = {2019},
-	keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - High Energy Astrophysical Phenomena, galaxies: active, galaxies: individual: 4C 31.04, galaxies: jets, galaxies: nuclei, ISM: jets and outflows, ISM: kinematics and dynamics},
+	keywords = {Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Astrophysics of Galaxies, galaxies: active, galaxies: jets, galaxies: nuclei, galaxies: individual: 4C 31.04, ISM: jets and outflows, ISM: kinematics and dynamics},
 	pages = {3393--3409},
 	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\72X6U26U\\Zovaro et al. - 2019 - Jets blowing bubbles in the young radio galaxy 4C .pdf:application/pdf;Zovaro et al. - 2019 - Jets blowing bubbles in the young radio galaxy 4C .pdf:C\:\\Users\\matthew\\Zotero\\storage\\WJ4F8WJ5\\Zovaro et al. - 2019 - Jets blowing bubbles in the young radio galaxy 4C .pdf:application/pdf}
 }
@@ -3256,7 +3256,7 @@ circumnuclear disc. Hydrodynamical modelling shows that the apparent discrepancy
 	journal = {Annual Review of Astronomy and Astrophysics},
 	author = {Saikia, D. J. and Salter, C. J.},
 	year = {1988},
-	keywords = {Bibliographies, Circular Polarization, Computational Astrophysics, Depolarization, Extragalactic Radio Sources, Faraday Effect, Interstellar Magnetic Fields, Linear Polarization, Magnetic Properties, Optical Polarization, Polarization Characteristics, Quasars, Radio Galaxies, Relic Radiation, Synchrotron Radiation, Variability},
+	keywords = {Quasars, Radio Galaxies, Synchrotron Radiation, Extragalactic Radio Sources, Interstellar Magnetic Fields, Faraday Effect, Linear Polarization, Bibliographies, Circular Polarization, Computational Astrophysics, Depolarization, Magnetic Properties, Optical Polarization, Polarization Characteristics, Relic Radiation, Variability},
 	pages = {93--144},
 	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\BSYJ2B7C\\Saikia and Salter - 1988 - Polarization properties of extragalactic radio sou.pdf:application/pdf}
 }
@@ -3293,7 +3293,7 @@ dissipation of turbulent fields in accretion disk coronae. These processes could
 	author = {Sikora, Marek and Begelman, Mitchell C.},
 	month = feb,
 	year = {2013},
-	keywords = {accretion, accretion disks, black hole physics, galaxies: active, galaxies: jets, magnetohydrodynamics: MHD, X-rays: binaries},
+	keywords = {galaxies: active, galaxies: jets, accretion, accretion disks, black hole physics, magnetohydrodynamics: MHD, X-rays: binaries},
 	pages = {L24},
 	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\8998RIQI\\Sikora and Begelman - 2013 - Magnetic Flux Paradigm for Radio Loudness of Activ.pdf:application/pdf}
 }
@@ -3404,4 +3404,145 @@ characterized by (1) transonic Mach numbers and (2) more or less unique ({\texta
 	note = {Publisher: Oxford Academic},
 	pages = {5074--5080},
 	file = {Accepted Version:C\:\\Users\\matthew\\Zotero\\storage\\8S4ZJ2VA\\Shabala - 2018 - The role of environment in the observed Fundamenta.pdf:application/pdf;Snapshot:C\:\\Users\\matthew\\Zotero\\storage\\J26JNAHJ\\5017792.html:text/html}
+}
+
+@article{osullivan_magnetic_2015,
+	title = {{THE} {MAGNETIC} {FIELD} {AND} {POLARIZATION} {PROPERTIES} {OF} {RADIO} {GALAXIES} {IN} {DIFFERENT} {ACCRETION} {STATES}},
+	volume = {806},
+	issn = {0004-637X},
+	url = {https://doi.org/10.1088%2F0004-637x%2F806%2F1%2F83},
+	doi = {10.1088/0004-637X/806/1/83},
+	abstract = {We use the integrated polarized radio emission at 1.4 GHz () from a large sample of active galactic nuclei (AGN; 796 sources at redshifts ) to study the large-scale magnetic field properties of radio galaxies in relation to the host galaxy accretion state. We find a fundamental difference in between radiative-mode AGN (i.e., high-excitation radio galaxies (HERGs) and radio-loud QSOs) and jet-mode AGN (i.e., low-excitation radio galaxies (LERGs)). While LERGs can achieve a wide range of (up to ∼30\%), the HERGs and radio-loud QSOs are limited to . A difference in is also seen when the sample is divided at 0.5\% of the total Eddington-scaled accretion rate, where the weakly accreting sources can attain higher values of . We do not find any clear evidence that this is driven by intrinsic magnetic field differences of the different radio morphological classes. Instead, we attribute the differences in to the local environments of the radio sources, in terms of both the ambient gas density and the magnetoionic properties of this gas. Thus, not only are different large-scale gaseous environments potentially responsible for the different accretion states of HERGs and LERGs, we argue that the large-scale magnetized environments may also be important for the formation of powerful AGN jets. Upcoming high angular resolution and broadband radio polarization surveys will provide the high-precision Faraday rotation measure and depolarization data required to robustly test this claim.},
+	language = {en},
+	number = {1},
+	urldate = {2020-12-06},
+	journal = {The Astrophysical Journal},
+	author = {O'Sullivan, S. P. and Gaensler, B. M. and Lara-López, M. A. and Velzen, S. van and Banfield, J. K. and Farnes, J. S.},
+	month = jun,
+	year = {2015},
+	note = {Publisher: American Astronomical Society},
+	pages = {83},
+	file = {IOP Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\ZM4UVVD8\\O'Sullivan et al. - 2015 - THE MAGNETIC FIELD AND POLARIZATION PROPERTIES OF .pdf:application/pdf}
+}
+
+@article{lovelace_dynamo_1976,
+	title = {Dynamo model of double radio sources},
+	volume = {262},
+	copyright = {1976 Nature Publishing Group},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/262649a0},
+	doi = {10.1038/262649a0},
+	abstract = {A model of radio sources is proposed in which the magnetised accretion disk of a massive black hole acts as an electric dynamo producing two oppositely-directed beams of ultra-relativistic particles.},
+	language = {en},
+	number = {5570},
+	urldate = {2020-12-06},
+	journal = {Nature},
+	author = {Lovelace, R. V. E.},
+	month = aug,
+	year = {1976},
+	note = {Number: 5570
+Publisher: Nature Publishing Group},
+	pages = {649--652},
+	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\JRAAKVDY\\Lovelace - 1976 - Dynamo model of double radio sources.pdf:application/pdf;Snapshot:C\:\\Users\\matthew\\Zotero\\storage\\PTVTDPNJ\\262649a0.html:text/html;Snapshot:C\:\\Users\\matthew\\Zotero\\storage\\ZBJGRD7Q\\262649a0.html:text/html}
+}
+
+@article{akiyama_global_2018,
+	title = {The {Global} {Jet} {Structure} of the {Archetypical} {Quasar} {3C} 273},
+	volume = {6},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	url = {https://www.mdpi.com/2075-4434/6/1/15},
+	doi = {10.3390/galaxies6010015},
+	abstract = {A key question in the formation of the relativistic jets in active galactic nuclei (AGNs) is the collimation process of their energetic plasma flow launched from the central supermassive black hole (SMBH). Recent observations of nearby low-luminosity radio galaxies exhibit a clear picture of parabolic collimation inside the Bondi accretion radius. On the other hand, little is known of the observational properties of jet collimation in more luminous quasars, where the accretion flow may be significantly different due to much higher accretion rates. In this paper, we present preliminary results of multi-frequency observations of the archetypal quasar 3C 273 with the Very Long Baseline Array (VLBA) at 1.4, 15, and 43 GHz, and Multi-Element Radio Linked Interferometer Network (MERLIN) at 1.6 GHz. The observations provide a detailed view of the transverse structure resolved on a broad range of spatial scales from sub-parsec to kilo parsecs, allowing us to profile the jet width as a function of the distance from the core for the first time in jets of bright quasars. We discovered a transition from a parabolic stream to a conical stream, which has been seen in much lower-luminosity radio galaxies. The similarity in the profile to the much lower-powered radio galaxy M87 suggests the universality of jet collimation among AGNs with different accretion rates.},
+	language = {en},
+	number = {1},
+	urldate = {2020-12-06},
+	journal = {Galaxies},
+	author = {Akiyama, Kazunori and Asada, Keiichi and Fish, Vincent L. and Nakamura, Masanori and Hada, Kazuhiro and Nagai, Hiroshi and Lonsdale, Colin J.},
+	month = mar,
+	year = {2018},
+	note = {Number: 1
+Publisher: Multidisciplinary Digital Publishing Institute},
+	keywords = {galaxies: active, galaxies: individual (3C 273), galaxies: jets, radio continuum: galaxies, techniques: high angular resolution, techniques: interferometric},
+	pages = {15},
+	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\6ICB98KH\\Akiyama et al. - 2018 - The Global Jet Structure of the Archetypical Quasa.pdf:application/pdf;Snapshot:C\:\\Users\\matthew\\Zotero\\storage\\BDSV466F\\htm.html:text/html}
+}
+
+@article{saikia_polarization_1988-1,
+	title = {Polarization {Properties} of {Extragalactic} {Radio} {Sources}},
+	volume = {26},
+	issn = {0066-4146, 1545-4282},
+	url = {http://www.annualreviews.org/doi/10.1146/annurev.aa.26.090188.000521},
+	doi = {10.1146/annurev.aa.26.090188.000521},
+	language = {en},
+	number = {1},
+	urldate = {2020-12-06},
+	journal = {Annual Review of Astronomy and Astrophysics},
+	author = {Saikia, D. J. and Salter, C. J.},
+	month = sep,
+	year = {1988},
+	pages = {93--144},
+	file = {1988ARA&A..26...pdf:C\:\\Users\\matthew\\Zotero\\storage\\FFJFV6N3\\1988ARA&A..26...pdf:application/pdf;Submitted Version:C\:\\Users\\matthew\\Zotero\\storage\\RXRFC3ZB\\Saikia and Salter - 1988 - Polarization Properties of Extragalactic Radio Sou.pdf:application/pdf}
+}
+
+@article{garofalo_fr0_2019,
+	title = {{FR0} radio galaxies and their place in the radio morphology classification},
+	volume = {871},
+	issn = {1538-4357},
+	url = {http://arxiv.org/abs/1811.05383},
+	doi = {10.3847/1538-4357/aaf056},
+	abstract = {So-called FR0 radio galaxies have recently emerged as a family of active galaxies with all the same properties as FRI radio galaxies except for their ratio of core to total emission which is about 30 times as high compared to FRI sources. We show how their properties ﬁt within the gap paradigm as low prograde spinning black holes whose progenitors are powerful FRII quasars that transitioned rapidly from cold mode into advection dominated accretion in a few million years. The prediction is that if suﬃcient fuel exists, FR0 radio galaxies will evolve into full- ﬂedged FRI radio galaxies and the observational dearth of FRI radio galaxies compared to FR0s at low redshift tells us about the supply of gas in the low redshift FR0s. Given the model prescription, this 5 to 1 FR0 to FRI ratio implies that at low redshift the FRII quasar class of active galaxies struggles to fuel its black hole beyond 1.3 times its original mass. In addition to this, we illustrate model prescriptions for the black hole mass, black hole spin, redshift and environment distribution for FR0 radio galaxies by ﬁtting them within a paradigm that views them as a continuous class of active galaxies that are sandwiched between FRII quasars and FRI radio galaxies.},
+	language = {en},
+	number = {2},
+	urldate = {2020-12-06},
+	journal = {The Astrophysical Journal},
+	author = {Garofalo, David and Singh, Chandra B.},
+	month = feb,
+	year = {2019},
+	note = {arXiv: 1811.05383},
+	keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - High Energy Astrophysical Phenomena},
+	pages = {259},
+	file = {Garofalo and Singh - 2019 - FR0 radio galaxies and their place in the radio mo.pdf:C\:\\Users\\matthew\\Zotero\\storage\\BCTXNPGM\\Garofalo and Singh - 2019 - FR0 radio galaxies and their place in the radio mo.pdf:application/pdf}
+}
+
+@article{garofalo_fr0_2019-1,
+	title = {{FR0} radio galaxies and their place in the radio morphology classification},
+	volume = {871},
+	issn = {1538-4357},
+	url = {http://arxiv.org/abs/1811.05383},
+	doi = {10.3847/1538-4357/aaf056},
+	abstract = {So-called FR0 radio galaxies have recently emerged as a family of active galaxies with all the same properties as FRI radio galaxies except for their ratio of core to total emission which is about 30 times as high compared to FRI sources. We show how their properties ﬁt within the gap paradigm as low prograde spinning black holes whose progenitors are powerful FRII quasars that transitioned rapidly from cold mode into advection dominated accretion in a few million years. The prediction is that if suﬃcient fuel exists, FR0 radio galaxies will evolve into full- ﬂedged FRI radio galaxies and the observational dearth of FRI radio galaxies compared to FR0s at low redshift tells us about the supply of gas in the low redshift FR0s. Given the model prescription, this 5 to 1 FR0 to FRI ratio implies that at low redshift the FRII quasar class of active galaxies struggles to fuel its black hole beyond 1.3 times its original mass. In addition to this, we illustrate model prescriptions for the black hole mass, black hole spin, redshift and environment distribution for FR0 radio galaxies by ﬁtting them within a paradigm that views them as a continuous class of active galaxies that are sandwiched between FRII quasars and FRI radio galaxies.},
+	language = {en},
+	number = {2},
+	urldate = {2020-12-06},
+	journal = {The Astrophysical Journal},
+	author = {Garofalo, David and Singh, Chandra B.},
+	month = feb,
+	year = {2019},
+	note = {arXiv: 1811.05383},
+	keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - High Energy Astrophysical Phenomena},
+	pages = {259},
+	file = {Garofalo and Singh - 2019 - FR0 radio galaxies and their place in the radio mo.pdf:C\:\\Users\\matthew\\Zotero\\storage\\827CFAH5\\Garofalo and Singh - 2019 - FR0 radio galaxies and their place in the radio mo.pdf:application/pdf}
+}
+
+@article{capetti_lofar_2020,
+	title = {The {LOFAR} view of {FR} 0 radio galaxies},
+	volume = {642},
+	issn = {0004-6361},
+	url = {http://adsabs.harvard.edu/abs/2020A%26A...642A.107C},
+	doi = {10.1051/0004-6361/202038671},
+	abstract = {We explore the low-frequency radio properties of the sources in the Fanaroff-Riley class 0 catalog (FR0CAT) as seen by the Low-Frequency ARray (LOFAR) observations at 150 MHz. This sample includes 104 compact radio active galactic nuclei (AGN) associated with nearby (z {\textless} 0.05) massive early-type galaxies. Sixty-six FR0CAT sources are in the sky regions observed by LOFAR and all of them are detected, usually showing point-like structures with sizes of ≲3-6 kpc. However, 12 FR 0s
+present resolved emission of low surface brightness, which contributes between 5\% and 40\% of the total radio power at 150 MHz, usually with a jetted morphology extending between 15 and 50 kpc. No extended emission is detected around the other FR 0s, with a typical luminosity limit of ≲5 × 1022 W Hz-1 over an area of 100
+kpc × 100 kpc. The spectral slopes of FR 0s between 150 MHz and
+1.4 GHz span a broad range (-0.7 ≲ α ≲ 0.8) with a
+median value of ᾱ ∼ 0.1; 20\% of them have a steep spectrum
+(α ≳ 0.5), which is an indication of the presence of
+substantial extended emission confined within the spatial resolution limit. The fraction of FR 0s showing evidence for the presence of jets, by including both spectral and morphological information, is at least ∼40\%. This study confirms that FR 0s and FR Is can be interpreted as two extremes of a continuous population of jetted sources, with the FR 0s representing the low end in size and radio power.},
+	urldate = {2020-12-06},
+	journal = {Astronomy and Astrophysics},
+	author = {Capetti, A. and Brienza, M. and Baldi, R. D. and Giovannini, G. and Morganti, R. and Hardcastle, M. J. and Rottgering, H. J. A. and Brunetti, G. F. and Best, P. N. and Miley, G.},
+	month = oct,
+	year = {2020},
+	keywords = {cD, galaxies: active, galaxies: elliptical and lenticular, galaxies: jets},
+	pages = {A107},
+	file = {Submitted Version:C\:\\Users\\matthew\\Zotero\\storage\\BQWL32BM\\Capetti et al. - 2020 - The LOFAR view of FR 0 radio galaxies.pdf:application/pdf}
 }
